--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/placeholder"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:networkSecurityConfig="@xml/network_security_config"
